--- a/package.json
+++ b/package.json
@@ -11,6 +11,21 @@
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,md,json,yaml,html}\"",
     "lint": "eslint src --ext .js"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js}": [
+      "eslint --fix",
+      "git add"
+    ],
+    "*.{md,css,yaml,json}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "dependencies": {
     "gatsby": "2.18.5",
     "gatsby-plugin-react-helmet": "^3.1.21",
